0.2.0-rc5 - unreleased
======================

 * Fixed a bug in the migration walker. Empty folders aren't skipped any more.
   [panjunyong]

 * Increase debugging in Migration suite to find issues with missing types in
   globalAllow.
   [tiran]

 * Ported atct_topic_view icon fix from HEAD.

 * Don't create ATDocuments when uploading .pdf and .doc files
  [batlogg]

 * Resurrected warning message when we hit a broken object in the folder
   migration.
   [tiran]

 * Local roles and Creator are kept when migration.
   [panjunyong]

 * Update requirements to the soon to release AT 1.3.2 version and svn.

 * Added update_data and manage_edit compat. methods to ATFile and ATImage.
   [tiran]

 * Added temporary fix for [ 1095242 ] EditableBody in ATNewsItem requires
   Modify portal content. It will stay in ATNewsItem until Plone is fixed.
   [tiran]

 * Fixed [ 1075193 ] infinite recursion in ATEvent. The __cmp__ hook was fixed
   a while ago but I forgot to mention it here.
   [tiran]

 * Fixed [ 1098347 ] validate_add_criterion.vpy has errors. The file was dos
   encoded
   [tiran]

 * Applied patch from [ 1104069 ] ATCT migration -- more ordering issues
   which fixes some more ordering issues
   [hahnfeld]

 * atct_topic_view now doesn't call getObject() anymore and is a small
   bit more performant. This also takes some burden from waking up objects.
   (Bug 1079030)
   [ctheune]

 * Made HTML the default content type for documents (and news items).
 * [ctheune]

 * Fixed [ 1080729 ] Wrong permissions for ATDocument.EditableText / setFormat
   [tiran]

 * Use StdoutStringIO in migration to be more verbose

 * Fixed atct_topcic_view: Make sure there is an object before referencing
   attributes. This can typically happen if there are problems with the
   AccessContentsInfo permission.
   [tesdal]

 * Removed support of Python 2.1 and 2.2 from INSTALL.txt. Some code like 
   migration requires new features of Python 2.3 like generators.
   [tiran]
